2008-07-05  Glenn Morris  <rgm@gnu.org>

	* make-dist (EMACS): Doc fix.
	(lisp): There are no *.dat or image files here any more.
	(src): There are no *.s files here any more.
	(etc/images, etc/images/*): Link to most regular files.

2008-07-04  Emanuele Giaquinta  <emanuele.giaquinta@gmail.com>  (tiny change)

	* configure.in: Remove reference to deleted $USE_FONT_BACKEND.

2008-07-01  Glenn Morris  <rgm@gnu.org>

	* configure.in (cpp_undefs): Rename from `undefs', update uses.
	Use $srcdir rather than $top_srcdir.  Set before calling AC_OUTPUT,
	and explicitly export there.  (Bug#507.)

2008-06-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in:
	* configure: Remove references to obsolete systems.

2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (Makefile): Use it for its timestamp value as well, and
	make it depend on all other */.in files.
	(src/Makefile, src/config.stamp, lib-src/Makefile)
	(doc/emacs/Makefile, doc/misc/Makefile, doc/lispref/Makefile)
	(doc/lispintro/Makefile, oldXMenu/Makefile, lwlib/Makefile)
	(leim/Makefile, lisp/Makefile): Remove those overlapping targets.
	(leim, ${SUBDIR}, blessmail): Only depend on Makefile now.

	* configure.in: Don't create src/config.stamp any more.

2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (${SUBDIR}): Pass additional BOOTSTRAPEMACS argument.

2008-06-22  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (top_bootclean): Remove obsolete references to lock/.

2008-06-21  Romain Francoise  <romain@orebokech.com>

	* Makefile.in (INFO_FILES): Add sasl.

2008-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (maybe_bootstrap, src/bootstrap-emacs${EXEEXT})
	(bootstrap-build): Remove.
	(top_bootclean): New var.
	(top_distclean, bootstrap-clean): Use it.
	(bootstrap): Don't recheck config.  Make normally.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (SUBDIR): Include `lisp'.
	(lisp): Depend on `src'.